--- a/安卓导航栏.md
+++ b/安卓导航栏.md
@@ -148,4 +148,93 @@
     }
 
 
+#BottomNavigationView实现底部导航  
+BottomNavigationView是一个类似于ToolBar的底部导航的控件，这个控件的用法和ToolBar如出一辙，甚至更加简单。  
+##1 准备  
+该控件是Android Support25.0.0包中新增的，所以首先要升级Support包，在build.gradle中增加如下代码：  
 
+	compile 'com.android.support:appcompat-v7:25.0.0-alpha1'
+##2. 使用  
+BottomNavigationView的使用比ToolBar还要简单，首先看XML中的常用属性（这里就不说什么id，layout_width等属性了）：  
+**同ToolBar一样，这些属性的使用也是要有个自定义的命名空间（xmlns:app="http://schemas.android.com/apk/res-auto"）**：  
+
+* menu:这个属性指定一个menu资源文件，作用就像ToolBar的action menu一样  
+* itemIconTint:指定图标的颜色，这个属性会覆盖每个itemIcon自己在xml文件中的颜色设置。（也就是说我的一个item的图标在menu文件的item元素的icon属性中的引用是一个Drawable，而这个Drawable在其定义的时候指定了颜色，而这个颜色最终会被itemIconTint指定的颜色锁覆盖）  
+* itemTextColor:看名字就知道，指定的是图标下面的文字的颜色  
+* itemBackground:这个指定的是整个BottomNavigationView的背景色。  
+
+看示例：  
+
+	<android.support.design.widget.BottomNavigationView  
+		android:id="@+id/bottom_nav"  
+		android:layout_width="match_parent"  
+		android:layout_height="wrap_content"  
+		android:layout_alignParentBottom="true"  
+		app:menu="@menu/menu_bottom_nav"  
+		app:itemIconTint="#FFFFFF"  
+		app:itemTextColor="#FFFFFF"  
+		app:itemBackground="@color/colorPrimary">  
+	</android.support.design.widget.BottomNavigationView>  
+menu菜单：  
+
+	<?xml version="1.0" encoding="utf-8"?>
+	<menu xmlns:android="http://schemas.android.com/apk/res/android"  
+		xmlns:app="http://schemas.android.com/apk/res-auto">  
+
+		<item android:id="@+id/bottom_nav_ui"  
+			android:enabled="true"  
+			app:showAsAction="ifRoom"  
+			android:title="@string/nav_ui"  
+			android:icon="@drawable/ic_menu_ui"/>
+  
+		<item android:id="@+id/bottom_nav_data"  
+			android:enabled="true"  
+			app:showAsAction="ifRoom"  
+			android:title="@string/nav_data"  
+			android:icon="@drawable/ic_menu_data"/>  
+
+		<item android:id="@+id/bottom_nav_service"  
+			android:enabled="true"  
+			app:showAsAction="ifRoom"  
+			android:title="@string/nav_service"  
+			android:icon="@drawable/ic_menu_service"/>  
+
+		<item android:id="@+id/bottom_nav_net"  
+			android:enabled="true"  
+			app:showAsAction="ifRoom"  
+			android:title="@string/nav_network"  
+			android:icon="@drawable/ic_menu_network"/>  
+
+		<item android:id="@+id/bottom_nav_media"  
+			android:enabled="true"  
+			app:showAsAction="ifRoom"  
+			android:title="@string/nav_media"  
+			android:icon="@drawable/ic_menu_media"/>  
+	</menu>  
+效果图：  
+![](http://7xjhi6.com1.z0.glb.clouddn.com/android-bottom-navigation-vewi-device-2.png)  
+由于一般都会有一个被选中，所以item可以设置checked属性来让一个按钮默认被选中。  
+##3. 监听事件  
+设置监听事件也比ToolBar简单多了，只需要为BottomNavigationView对象调用setOnNavigationItemSelectedListener方法就行：  
+
+	bottom=(BottomNavigationView)findViewById(R.id.bottom);
+        bottom.setOnNavigationItemSelectedListener(new BottomNavigationView.OnNavigationItemSelectedListener() {
+            @Override
+            public boolean onNavigationItemSelected(@NonNull MenuItem item) {
+                switch (item.getItemId()){
+                    case R.id.whatshot:
+                        Toast.makeText(MainActivity.this,"点击了第一个按钮",Toast.LENGTH_SHORT).show();
+                        break;
+                    case R.id.camera:
+                        Toast.makeText(MainActivity.this,"点击了第二个按钮",Toast.LENGTH_SHORT).show();
+                        break;
+                    case R.id.emotion:
+                        Toast.makeText(MainActivity.this,"点击了第三个按钮",Toast.LENGTH_SHORT).show();
+                        break;
+                    case R.id.voice:
+                        Toast.makeText(MainActivity.this,"点击了第四个按钮",Toast.LENGTH_SHORT).show();
+                        break;
+                }
+                return true;
+            }
+        });  
